Fixed Transaction Filter Alignment Issue

--- a/src/main.css
+++ b/src/main.css
@@ -127,7 +127,7 @@ img {
 }
 
 .search-btn {
-    margin-right: 18px;
+    margin-right: 12px;
 }
 .anticon {
     margin-right: 5px;
